--- a/public/components/MainPage/headerComponent/header-chat.css
+++ b/public/components/MainPage/headerComponent/header-chat.css
@@ -8,6 +8,7 @@
 
 .header-chat_style {
     background-color: var(--global-green-color);
+    border-radius: 10px;
 }
 
 .header-chat__text {
@@ -17,15 +18,16 @@
     justify-content: center;
     align-self: center;
     height: 80%;
-    width: 80%;
+    width: 100%;
+    margin: 5px 0 0 0;
 }
 
 .header-chat__text_style {
     font-family: var(--global-font-family-Montserrat);
-    font-size: 14px;
+    font-size: 16px;
     letter-spacing: 0.5px;
     word-spacing: -1px;
-    color: #000000;
-    font-weight: 300;
+    color:#FFFFFF;
+    font-weight: 400;
 
 }
