--- a/public/components/MainPage/typingBlock/typingBlock.pug
+++ b/public/components/MainPage/typingBlock/typingBlock.pug
@@ -4,6 +4,6 @@ div.typing-block
     form.input
         div.input__icon-container
             img.input__icon-container__icon.input__icon-container__icon_style(src="/images/add.png")
-        textarea.input__text.input__text_style(placeholder="chat here..")
+        textarea.input__text.input__text_style(placeholder="ask here..")
         div.input__icon-container
             img.input__icon-container__icon.input__icon-container__icon_style(src="/images/send.png")
