--- a/public/components/MainPage/typingBlock/typingBlock.pug
+++ b/public/components/MainPage/typingBlock/typingBlock.pug
@@ -1,9 +1,9 @@
-div.typing-block
-    div.msgwindow-container.msgwindow-container__style
-        div.msgwindow-container__msgwindow.msgwindow-container__msgwindow_style
-    form.input
-        div.input__icon-container
-            img.input__icon-container__icon.input__icon-container__icon_style(src="/images/add.png")
-        textarea.input__text.input__text_style(placeholder="ask here..")
-        div.input__icon-container
-            img.input__icon-container__icon.input__icon-container__icon_style(src="/images/send.png")
+div.support-typing-block
+    div.support-msgwindow-container.support-msgwindow-container__style
+        div.support-msgwindow-container__support-msgwindow.support-msgwindow-container__support-msgwindow_style
+    form.support-input
+        div.support-input__icon-container
+            img.support-input__icon-container__icon.support-input__icon-container__icon_style(src="/images/add.png")
+        textarea.support-input__text.support-input__text_style(placeholder="ask here..")
+        div.support-input__icon-container
+            img.support-input__icon-container__icon.support-input__icon-container__icon_style(src="/images/send.png")
