--- a/public/components/MainPage/typingBlock/inputBlock/input-block.css
+++ b/public/components/MainPage/typingBlock/inputBlock/input-block.css
@@ -1,4 +1,4 @@
-.input {
+.support-input {
     flex: 0 0 auto;
     display: flex;
     flex-direction: row;
@@ -11,7 +11,7 @@
 
 /*icon-container element*/
 
-.input__icon-container {
+.support-input__icon-container {
     flex: 0 0 15%;
     display: flex;
     flex-direction: row;
@@ -21,24 +21,24 @@
 
 /*icon element in icon-container*/
 
-.input__icon-container__icon {
+.support-input__icon-container__icon {
     object-fit: scale-down;
     object-position: top;
     max-width:80%;
     max-height:80%;
     height: 3vh; /*experimenting with viewports*/
 }
-.input__icon-container__icon_style {
+.support-input__icon-container__icon_style {
     filter: opacity(0.9);
 }
-.input__icon-container__icon_style:hover{
+.support-input__icon-container__icon_style:hover{
     filter: invert(0.7) brightness(200%) saturate(10%);
     border-radius: 20px;
 }
 
 /*text element*/
 
-.input__text {
+.support-input__text {
     flex: 0 0 65%;
     box-sizing: border-box;
     overflow-y:scroll;
@@ -47,18 +47,18 @@
     padding: 5px 0 0 5px;
 }
 
-.input__text::-webkit-scrollbar {
+.support-input__text::-webkit-scrollbar {
     width: 5px;
 }
 
-.input__text::-webkit-scrollbar-thumb {
+.support-input__text::-webkit-scrollbar-thumb {
     border-radius: 5px;
     background-color: var(--global-grey-color);
     -webkit-box-shadow: inset 0 0 6px var(--global-darkgrey-color);
 }
 
 
-.input__text_style {
+.support-input__text_style {
     font-size: 14px;
     font-family: var(--global-font-family-Montserrat);
     color: #000000;
@@ -69,6 +69,6 @@
     background-color: var(--global-grey-color);
 }
 
-.input__text_style:focus-within {
+.support-input__text_style:focus-within {
     color: #000000;
 }
